--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <body>
-    <h1>This is a Header</h1>
+    <h2>This is a Header</h2>
     <p>This is a paragraph</p>
     <p>This is another paragraph</p>
-    <p>Sain baina uu?</p>
+    <p>Hello!</p>
 </body>
 
 </html>
